--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,23 @@ jobs:
         python -m flake8
         cd infra_project/
         python manage.py test
+
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        uses: docker/login-action@v1 
+        with:
+          username: maxim94sam
+          password: M1a9k9s4m1a9k9s4
+      - name: Push to Docker Hub 
+        uses: docker/build-push-action@v2 
+        with:
+          push: true
+          tags: maxim94sam/infra:latest
