--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Login to Docker 
         uses: docker/login-action@v1 
         with:
-          username: maxim94sam
-          password: M1a9k9s4m1a9k9s4
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub 
         uses: docker/build-push-action@v2 
         with:
